--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "gsap": "^3.13.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-router": "^7.10.1",
     "sonner": "^2.0.7",
     "tailwindcss": "^4.1.14"
   },
