--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,11 +13,12 @@
     "@gsap/react": "^2.1.2",
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.14",
-    "axios": "^1.12.2",
+    "axios": "^1.13.2",
     "gsap": "^3.13.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router": "^7.10.1",
+    "react-router-dom": "^7.10.1",
     "sonner": "^2.0.7",
     "tailwindcss": "^4.1.14"
   },
