Za blagoja backend

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=ris-backend
 
 # DATABASE CONFIG
-spring.datasource.url=jdbc:postgresql://\:5432/risRecepti
+spring.datasource.url=jdbc:postgresql://localhost:5432/recipevwr
 spring.datasource.username=postgres
-spring.datasource.password=B@to2005!Jovana
+spring.datasource.password=2806005
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
