--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=ris-backend
 # DATABASE CONFIG
 spring.datasource.url=jdbc:postgresql://\:5432/risRecepti
 spring.datasource.username=postgres
-spring.datasource.password=B@to2005!Jovana
+spring.datasource.password=ljupka2911
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
