--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,13 +1,9 @@
 spring.application.name=ris-backend
 
 # DATABASE CONFIG
-spring.datasource.url=jdbc:postgresql://localhost:5432/recipevwr
+spring.datasource.url=jdbc:postgresql://\:5432/risRecepti
 spring.datasource.username=postgres
-<<<<<<< HEAD
-spring.datasource.password=ljupka2911
-=======
-spring.datasource.password=2806005
->>>>>>> 4ba4cc5f923328990bfb90bbf5ccc37f52c945ca
+spring.datasource.password=B@to2005!Jovana
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
