--- a/workflows/ci.yml
+++ b/workflows/ci.yml
@@ -28,3 +28,25 @@ jobs:
       - name: Build with Maven
         run: mvn -B package --file pom.xml -DskipTests
         working-directory: backend
+
+    build_frontend:
+      name: Build frontend
+      runs-on: ubuntu-latest
+      needs: build_backend
+  
+      steps:
+        - name: Checkout repository
+          uses: actions/checkout@v3
+  
+        - name: Setup Node.js
+          uses: actions/setup-node@v3
+          with:
+            node-version: 18
+  
+        - name: Install frontend dependencies
+          run: npm install
+          working-directory: frontend
+  
+        - name: Build frontend
+          run: npm run build
+          working-directory: frontend
