--- a/workflows/ci.yml
+++ b/workflows/ci.yml
@@ -50,3 +50,42 @@ jobs:
       - name: Build frontend
         run: npm run build
         working-directory: frontend
+
+    test_backend:
+      name: Run backend tests
+      runs-on: ubuntu-latest
+      needs: build_frontend
+
+    services:
+      postgres:
+        image: postgres:15
+        env:
+          POSTGRES_DB: risRecepti
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+        ports:
+		■  5432:5432
+        options: >-
+          --health-cmd="pg_isready -U postgres"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
+
+    steps:
+	○  name: Checkout repository
+        uses: actions/checkout@v3
+
+	○  name: Setup Java
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'adopt'
+          java-version: '20'
+          cache: maven
+
+	○  name: Run backend tests
+        run: mvn test
+        working-directory: backend
+        env:
+          SPRING_DATASOURCE_URL: jdbc:postgresql://localhost:5432/risRecepti
+          SPRING_DATASOURCE_USERNAME: postgres
+          SPRING_DATASOURCE_PASSWORD: postgres
